# ChangeLog for sci-misc/irstlm
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*irstlm-5.80.08 (28 Feb 2015)

  28 Feb 2015; Pavel Denisov <pavel.a.denisov@gmail.com>
  -irstlm-5.80.03.ebuild, -irstlm-5.80.06.ebuild, +irstlm-5.80.08.ebuild:
  Version bump.

*irstlm-5.80.06 (22 Oct 2014)

  22 Oct 2014; Pavel Denisov <pavel.a.denisov@gmail.com>
  +irstlm-5.80.06.ebuild:
  Version Bump

*irstlm-5.80.03 (21 Nov 2013)

  21 Nov 2013; Pavel Denisov <pavel.a.denisov@gmail.com> +irstlm-5.80.03.ebuild,
  +metadata.xml:
  sci-misc/irstlm: new ebuild