@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  sci-misc/irstlm: Updating remote-id in metadata.xml
+
 *irstlm-5.80.08 (28 Feb 2015)
 
   28 Feb 2015; Pavel Denisov <pavel.a.denisov@gmail.com>
